--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,8 @@ Version: 1.0
 Date: 2021-01-24
 Author: Yunyi Shen
 Maintainer: Yunyi Shen <yyshen@pku.edu.cn>
-Description: Solve the Algebraic Riccati equation
-License: MIT
+Description: This package provides method to solve the Algebraic Riccati equations. 
+License: GPL-3
 Imports: Rcpp (>= 1.0.5)
 LinkingTo: Rcpp, RcppArmadillo
 RoxygenNote: 7.1.1
