--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,10 +3,10 @@ Type: Package
 Title: Solve the Algebraic Riccati equation
 Version: 1.0
 Date: 2021-01-24
-Author: Yunyi Shen
-Maintainer: Yunyi Shen <yyshen@pku.edu.cn>
+Authors@R: c(person("Yunyi", "Shen", email = "yshen99@wisc.edu", role = c("aut", "cre"),comment = c(ORCID = "0000-0003-2779-6507")),person("Claudia","Solis-Lemus", role = "aut", comment = c(ORCID = "0000-0002-9789-8915")))
+Maintainer: Yunyi Shen <yshen99@wisc.edu>
 Description: This package provides method to solve the Algebraic Riccati equations. 
-License: GPL-3
+License: GPL-3 + file LICENSE
 Imports: Rcpp (>= 1.0.5)
 LinkingTo: Rcpp, RcppArmadillo
 RoxygenNote: 7.1.1
